[package]
name = "ocr_import"
version = "0.1.0"
edition = "2021"

[dependencies]
pentacam_types = { path = "../pentacam_types" }
oar-ocr = "0.6"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
nalgebra = "0.33"
regex = "1"
once_cell = "1"

[dev-dependencies]
dicom-object = "0.6"
dicom-core = "0.6"
glob = "0.3"
