[package]
name = "ocr_import"
version = "0.1.0"
edition = "2021"

[dependencies]
pentacam_types = { path = "../pentacam_types" }
oar-ocr = { version = "0.6", features = ["cuda"] }
oar-ocr-core = "0.6"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
nalgebra = "0.33"
regex = "1"
once_cell = "1"

[dev-dependencies]
pentacam_types = { path = "../pentacam_types" }
dicom_import = { path = "../dicom_import" }
dicom-object = "0.9"
dicom-core = "0.9"
glob = "0.3"
walkdir = "2.5"
